# Head

- Improved the number of cases where SUM is partially eliminated
- Now replaces IF statements at compile time if the condition can be evaluated
- Stop replacing 0^X and 0/X with zero. If X is zero, then an error is the correct answer.
- Inlined blanks are now returned as blanks not at zeros.
- When extracting constants, now uses the integer numbers from one to ten that are defined as constants in the C runtime
- Improved the annoying emergency bodge on array formulae extraction to interpret INDIRECTs within array formulae in more cases
- Can now parse some formulae with a trailing percentage suffix like ROUND(24.3,0)% 
- If INDEX is passed an errors in both arguments, returns the error in its first argument
- Now simplifies SUM() with single arguments to the single argument
- Now deals with arrays that should be converted to single cells inside of IF statements
- Altered how SUMIFS deals with passed errors in ruby verison (need to check C version)
- Can now partially replace SUMIFS in situations where it is being used as a form of lookup
- Refactored AVERAGEIFS and SUMIFS in ruby to be more like C
- Better error message when named reference can't be parsed
- Changed the default match_type in the MATCH function to be 1
- Fixed a bug when a table has column names containing a # symbol
- Can now isolate more than one worksheet at the same time

# 0.2.18 - 2013 March 2nd

- Had another go at dealing with the way that blank cells become zeros when referenced in some ways but not others
- Named references that are actually #REF! errors are correctly parsed and then turned into errors
- Implemented the VALUE function

# 0.2.17 - 2013 February 11th

- Changed how SUMIF, SUMIFS, and AVERAGEIFS treat blanks in criteria (now consider them to be zeros)
- Add missing cells if they are referenced 
- Adjust the way that ISBLANK() is replaced with a value at compile time

# 0.2.16 - 2013 February 10th

- Fixed bug in response when LEFT and RIGHT are passed negative values