@@ -152,4 +152,14 @@ END
     r.map(input_ast).should == output_ast
   end
 
+
+  it "should work in this excessively arithmetic case" do 
+    input_ast = [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:arithmetic, [:sheet_reference, :WST, [:cell, :I483]], [:operator, :+], [:sheet_reference, :WST, [:cell, :L483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :O483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :R483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :U483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :X483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AA483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AD483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AG483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AJ483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AM483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AP483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AS483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AV483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :AY483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BB483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BE483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BH483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BK483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BN483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BQ483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BT483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BW483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :BZ483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CC483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CF483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CI483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CL483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CO483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CR483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CU483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :CX483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DA483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DD483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DG483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DJ483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DM483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DP483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DS483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DV483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :DY483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :EB483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :EE483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :EH483]]], [:operator, :+], [:sheet_reference, :WST, [:cell, :EK483]]]
+    output_ast = input_ast.dup
+
+
+    r = ReplaceArithmeticOnRangesAst.new
+    r.map(input_ast).should == output_ast
+  end
+
 end
